--- a/docs-content/migrating.html.md.erb
+++ b/docs-content/migrating.html.md.erb
@@ -3,33 +3,28 @@ title: Migrating Apps to PAS for Windows
 owner: Windows
 ---
 
-This topic describes the process of migrating apps using PAS for Windows 2012R2 to the latest PAS for Windows 2016 server stack.
-
-If you are installing PAS for Windows to new apps only, see [Installing and Configuring PAS for Windows](installing.html).
-
-## <a id="install-tile"></a> Step 1: Install the PAS for Windows Tile
-
-<%= partial "install-tile" %>
-
-## <a id="configure-tile"></a> Step 2: Configure and Deploy the Tile
-
-<%= partial "configure-tile" %>
-
-## <a id="push-app"></a> Step 3: Push New App
+This topic describes the process of migrating apps running on Windows Runtime for PCF or PAS for Windows 2012R2 cells to run on PAS for Windows cells, which run Windows Server 2016.
 
 Pivotal recommends you use the blue-green deployment method for high availability. For more information about blue-green deployments, see [Using Blue-Green Deployment to Reduce Downtime and Risk](../devguide/deploy-apps/blue-green.html).
+
+## <a id="install-tile"></a> Step 1: Install and Deploy PAS for Windows Tile
+
+To install and deploy the **PAS for Windows** tile, follow step 1 and 2 of [Installing and Configuring PAS for Windows](installing.html).
+
+## <a id="push-app"></a> Step 3: Push App to PAS for Windows Cells
 
 Perform the following steps to deploy an app with the blue-green method:
 
 1. Run `cf login` to log in to the cf CLI.
 
 1. Choose your org and space.
+
 1. `cd` to the location of your app.
 <pre class="terminal">$ cd /MY/WINDOWS/APP</pre>
 
 1. Push a "blue" app. Pivotal recommends you append `-blue` to your app name.
 <pre class="terminal">$ cf push APP\_NAME-blue -s windows -b BUILDPACK -n HOSTNAME </pre>
-The push command must include the `-s` flag to specify the stack as windows, which instructs PCF to run the app in the Windows cell. 
+The push command must include the `-s` flag to specify the stack as `windows`, which instructs PCF to run the app in the Windows cell. 
 
 1. Push the "green" app with `--no-start` so it creates the instance VMs but does not start the app. Remember to include `-s windows`.
 <pre class="terminal">$ cf push APP\_NAME-green -s windows -b BUILDPACK -n HOSTNAME --no-start </pre>
@@ -42,19 +37,19 @@ The push command must include the `-s` flag to specify the stack as windows, whi
 1. Unmap the blue app's route by running the [cf unmap-route](http://cli.cloudfoundry.org/en-US/cf/unmap-route.html) command.
 <pre class="terminal">$ cf unmap-route APP\_NAME-blue DOMAIN -n HOSTNAME </pre>
 
-1. See that your blue and green apps are up and running. If you experience a problem, see [Troubleshooting Application Deployment and Health](../devguide/deploy-apps/troubleshoot-app-health.html).
+1. Run `cf apps` to see that your blue and green apps are running. If you experience a problem, see [Troubleshooting Application Deployment and Health](../devguide/deploy-apps/troubleshoot-app-health.html).
 
-## <a id="delete-app"></a> Step 4: Delete Old App
+## <a id="delete-app"></a> Step 4: Delete App from Windows 2012 Server Cells
 
-To delete old apps, run the [cf delete](http://cli.cloudfoundry.org/en-US/cf/delete.html) command for each app. To also delete any mapped routes, run the command with the `-r` flag.<pre class="terminal">$ cf delete OLD\_APP\_NAME -r</pre>
+To delete the old app, run the [cf delete](http://cli.cloudfoundry.org/en-US/cf/delete.html) command. To also delete any mapped routes, run the command with the `-r` flag.<pre class="terminal">$ cf delete OLD\_APP\_NAME -r</pre>
 
 
 ## <a id="uninstall-old-tile"></a> Step 5: (Optional) Uninstall Old Tile
 
-If you are no longer using the **Windows 2012R2** tile, perform the following steps:
+Once you have migrated all of your apps and you are no longer using the **Windows 2012R2** tile, perform the following steps:
 
 1. From the Installation Dashboard, click the trash icon on the **Windows 2012R2** tile to remove that product. In the **Delete Product** dialog box that appears, click **Confirm**.
 
-1. In the Pending Changes view, click **Apply Changes**.
+1. In the **Pending Changes** view, click **Apply Changes**.
 
-    After you delete a product, the product tile is removed from the installation and the Installation Dashboard. However, the product appears in the Available Products view.
+    After you delete a product, the product tile is removed from the installation and the Installation Dashboard. However, the product appears in the **Available Products** view.
