--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -16,7 +16,7 @@ There are two settings in the PAS tile that affect the Windows cells installed b
 
 1. Download the product file from the **Pivotal Application Service for Windows** page of [Pivotal Network](https://network.pivotal.io/products/pas-windows).
 
-1. From the same [Pivotal Network](https://network.pivotal.io/products/pas-windows) page, download the **PAS for Windows File System Injector** tool for your workstation OS, Windows, Linux, or Mac. The Injector tool is an executable binary `winfs-injector` that adds the Windows Server 2016 operating system into the product file, to make it importable by PCF.
+1. From the same [Pivotal Network](https://network.pivotal.io/products/pas-windows) page, download the **PAS for Windows File System Injector** tool for your workstation OS, Windows, Linux, or Mac. The Injector tool is an executable binary `winfs-injector` that adds the Windows Server 2016 operating system into the product file, enabling PCF to import the file.
 
 1. Run `winfs-injector` with the following options, replacing `PAS-WINDOWS-DOWNLOADED.pivotal` with the path to the downloaded PAS for Windows product file and `PAS-WINDOWS.pivotal` with a file path to write the importable product file out to:
     <pre class="terminal">
