Incorporate Windows feedback [#152735357]

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -41,6 +41,8 @@ The minimum resource requirement for each Windows cell is:
 
 * <a href="installing.html" class="subnav">Installing and Configuring PAS for Windows</a>
 
+* <a href="migrating.html" class="subnav">Migrating Apps to PAS for Windows</a>
+
 ### <a id='admin'></a>Admin Guide
 
 * <a href="./upgrade-windows.html" class="subnav">Upgrading Windows Cells</a>
