--- a/docs-content/migrating.html.md.erb
+++ b/docs-content/migrating.html.md.erb
@@ -46,9 +46,9 @@ To delete the old app, run the [cf delete](http://cli.cloudfoundry.org/en-US/cf/
 
 ## <a id="uninstall-old-tile"></a> Step 5: (Optional) Uninstall Old Tile
 
-Once you have migrated all of your apps and you are no longer using the **Windows 2012R2** tile, perform the following steps:
+Once you have migrated all of your apps and you are no longer using the **Windows Runtime** or  **Windows 2012R2** tile, perform the following steps:
 
-1. From the Installation Dashboard, click the trash icon on the **Windows 2012R2** tile to remove that product. In the **Delete Product** dialog box that appears, click **Confirm**.
+1. From the Installation Dashboard, click the trash icon on the tile to remove that product. In the **Delete Product** dialog box that appears, click **Confirm**.
 
 1. In the **Pending Changes** view, click **Apply Changes**.
 
