fixes per Max [#152421178]

--- a/docs-content/upgrade-windows.html.md.erb
+++ b/docs-content/upgrade-windows.html.md.erb
@@ -5,14 +5,14 @@ owner: Greenhouse
 
 <strong><%= modified_date %></strong>
 
-This topic describes how to upgrade and rotate the credentials for PCF Runtime for Windows tile, update the Windows stemcell, and upgrade your Windows apps.
+This topic describes how to upgrade and rotate the credentials for the PCF Runtime for Windows tile, update the Windows stemcell, and upgrade your Windows apps.
 
 
 ##<a id='when'></a> When to Upgrade
 
 You must upgrade the PCF Runtime for Windows tile at the same time or immediately after you upgrade the Elastic Runtime tile.
 
-Unless otherwise noted, any minor version of PCF Runtime for Windows is compatible with the same minor version of Elastic Runtime. For example, any 1.12.* version of PCF Runtime for Windows works with any 1.12.* version of Elastic Runtime.
+Unless otherwise noted, any minor version of PCF Runtime for Windows is compatible with the same minor version of Elastic Runtime. For example, any 1.12.x version of PCF Runtime for Windows works with any 1.12.x version of Elastic Runtime.
 
 ##<a id='upgrade-tile'></a> Upgrade PCF Runtime for Windows
 
