point to rather than incorrectly repeat tile upgrade instrux [#152421178]

--- a/docs-content/upgrade-windows.html.md.erb
+++ b/docs-content/upgrade-windows.html.md.erb
@@ -16,13 +16,9 @@ Unless otherwise noted, any minor version of PCF Runtime for Windows is compatib
 
 ##<a id='upgrade-tile'></a> Upgrade PCF Runtime for Windows
 
-The latest versions of your existing products appear in the **Ops Manager Installation Dashboard**. Upgrade your product to the latest version by following these instructions.
+To upgrade PCF Runtime for Windows:
 
-1. Navigate to the **Ops Manager Installation Dashboard**.
-
-1. Click on the green download icon on the left-hand side of the screen to locate and download the product version to which you want to upgrade.
-
-1. When the download completes, click **Apply Changes**.
+1. Follow the instructions [Upgrading PCF Products](../customizing/upgrading-products.html#other-products) with the latest PCF Runtime for Windows product download from [Pivotal Network](https://network.pivotal.io/products/runtime-for-windows)).
 
 1. If necessary, configure the product. For more information about configuring PCF Runtime for Windows, see the [Deploying PCF Runtime for Windows](./deploy-windows.html) topic.
 
