fix Pivnet link

--- a/docs-content/upgrade-windows.html.md.erb
+++ b/docs-content/upgrade-windows.html.md.erb
@@ -18,7 +18,7 @@ Unless otherwise noted, any minor version of PCF Runtime for Windows is compatib
 
 To upgrade PCF Runtime for Windows:
 
-1. Follow the instructions [Upgrading PCF Products](../customizing/upgrading-products.html#other-products) with the latest PCF Runtime for Windows product download from [Pivotal Network](https://network.pivotal.io/products/runtime-for-windows)).
+1. Follow the instructions [Upgrading PCF Products](../customizing/upgrading-products.html#other-products) with the latest PCF Runtime for Windows product download from [Pivotal Network](https://network.pivotal.io/products/p-windows-runtime).
 
 1. If necessary, configure the product. For more information about configuring PCF Runtime for Windows, see the [Deploying PCF Runtime for Windows](./deploy-windows.html) topic.
 
