--- a/docs-content/upgrade-windows.html.md.erb
+++ b/docs-content/upgrade-windows.html.md.erb
@@ -15,13 +15,9 @@ To rotate your credentials in PAS for Windows, re-deploy PAS and PAS for Windows
 
 ##<a id='upgrade-tile'></a> Upgrade PAS for Windows
 
-The latest versions of your existing products appear in the **Ops Manager Installation Dashboard**. Upgrade your product to the latest version by following these instructions.
+To upgrade PAS for Windows:
 
-1. Navigate to the **Ops Manager Installation Dashboard**.
-
-1. Click on the green download icon on the left-hand side of the screen to locate and download the product version to which you want to upgrade.
-
-1. When the download completes, click **Apply Changes**.
+1. Follow the instructions [Upgrading PCF Products](../customizing/upgrading-products.html#other-products) with the latest PAS for Windows product download from [Pivotal Network](https://network.pivotal.io/products/pas-windows).
 
 1. If necessary, configure the product. For more information about configuring PAS for Windows, see the [Installing and Configuring PAS for Windows](./installing.html) topic.
 
