--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -43,6 +43,8 @@ Due to Microsoft's licensing requirements, operators must either bring their own
 
 ## <a id='install'></a>Installing PCF Runtime for Windows ##
 
+* <a href="./about-windows-stemcells.html">Using Windows Stemcells</a>
+
 * <a href="./deploy-windows.html" class="subnav">Deploying PCF Runtime for Windows</a>
 
 
