--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -62,7 +62,7 @@ There are two settings in the Elastic Runtime tile that affect the Windows cells
     <%= image_tag('pcf-windows-tile-stemcell.png') %>
 
 1. Retrieve the stemcell by following the steps below for your IaaS.
-    * For vSphere, you must create your own stemcell. For more information, see either [Creating a vSphere Stemcell Manually](vsphere-stemcell-build.html) or [Creating a vSphere Stemcell by Hand](https://github.com/cloudfoundry-incubator/bosh-windows-stemcell-builder/wiki/Creating-a-vSphere-Stemcell-by-Hand).
+    * For vSphere, you must create your own stemcell. For more information, see [Creating a vSphere Stemcell Manually](vsphere-stemcell-build.html).
     * For AWS, GCP, and Azure, navigate to the **Stemcells for PCF (Windows)** page of [Pivotal Network](https://network.pivotal.io/products/stemcells-windows-server). For more information, see the [Light Stemcells](./about-windows-stemcells.html#light-stemcells) section of the *Using Windows Stemcells* topic.
 
 1. Click **Save**.
