--- a/docs-content/about-windows-stemcells.html.md.erb
+++ b/docs-content/about-windows-stemcells.html.md.erb
@@ -57,7 +57,7 @@ Light stemcells are available for Microsoft Azure, AWS, and GCP, which typically
 
 Below is IaaS-specific documentation for light stemcells you can use with the Runtime for Windows tile:
 
-+ <a href="../windows/azure-light-stemcell.html" class="subnav">Deploying the Azure Light Stemcell</a>
++ <a href="./azure-light-stemcell.html" class="subnav">Deploying the Azure Light Stemcell</a>
 
 
 ## <a id="stemcell-builds"></a> Stemcell Builds
