Add link to Windows Stemcells page [#152766563]

--- a/docs-content/upgrade-windows.html.md.erb
+++ b/docs-content/upgrade-windows.html.md.erb
@@ -50,3 +50,4 @@ To rotate your credentials in PCF Runtime for Windows, re-deploy Elastic Runtime
 
 1. Click **Apply Changes**.
 
+For more information about Windows stemcells, see [Using Windows Stemcells](./about-windows-stemcells.html).
