--- a/docs-content/windows-troubleshooting.html.md.erb
+++ b/docs-content/windows-troubleshooting.html.md.erb
@@ -114,7 +114,7 @@ Perform the following steps to connect to your Windows cell to run diagnostics:
 	* For Windows, download the Microsoft Remote Desktop app from [Microsoft](https://www.microsoft.com/en-us/store/p/microsoft-remote-desktop/9wzdncrfj3ps).
 	* For Linux/UNIX, download an RDP client like [rdesktop](http://www.rdesktop.org/).
 
-1. Add the `enable_rdp` addon from the [windows-utilities-release](https://github.com/cloudfoundry-incubator/windows-utilities-release) to your bosh `runtime-config`. You can access your runtime config with `bosh runtime-config`. Here is an example runtime config that utilizes the `enable_rdp` addon:
+1. You will need to add the [windows-utilities-release](https://github.com/cloudfoundry-incubator/windows-utilities-release) (version 0.4.0 and later) BOSH Add-on. Add the `enable_rdp` job to your runtime config. You can access your runtime config with `bosh runtime-config`. Here is an example runtime config that utilizes the `enable_rdp` addon:
    <pre><code><span>releases:</span>
    <span>- name: windows-utilities</span>
    <span>  version: \<Release Version\></span>
@@ -124,27 +124,24 @@ Perform the following steps to connect to your Windows cell to run diagnostics:
    <span>  jobs:</span>
    <span>  - name: enable\_rdp</span>
    <span>    release: windows-utilities</span>
+   <span>  include:</span>
+   <span>    stemcell:</span>
+   <span>    - os: windows2012R2</span>
    </code></pre>
 
-   Be certain that the windows-utlities release has been uploaded by checking the windows-utilities release version:
+   Be certain that the `windows-utlities` release has been uploaded by checking the release version:
       <pre class="terminal"> $ bosh releases </pre>If you discover that `windows-utilities` is missing, follow [these instructions](https://bosh.io/docs/create-release.html#dev-release).
 
-Next, upload the `runtime-config`. **Note:** The runtime config applies to all VMS in your bosh cluster. And therefore will enable RDP on all windows VMs.
+Next, upload the runtime config. **Note:** The runtime config applies to all VMS managed by BOSH, and therefore will enable RDP on all Windows VMs.
       <pre class="terminal"> $ bosh update runtime-config &lt;runtime config filename&gt; </pre>
 
 Run the following command to retrieve the IP address of the Windows cell you would like to connect to:
       <pre class="terminal"> $ bosh vms </pre>
 
 ####Obtain login credentials for your Windows cell.
-   - If you have ssh enabled (via the [windows-utilities-release](https://github.com/cloudfoundry-incubator/windows-utilities-release) ) you may ssh into the target vm and create a new user and password that can be used to to rdp. This will work on all IasS. However, it is recommended to not use the username `Administrator` as not all IasS make that username available by default.
-   <pre><code>NET.exe USER &lt;username&gt; &lt;password&gt; /ADD
-   NET.exe LOCALGROUP Administrators &lt;username&gt; /ADD
-   </code></pre>
-   - If you are using AWS or vSphere and chose **Set the password** under **VM Options** > **Manage Administrator Password** when you configured the PCF Runtime for Windows tile, the username is `Administrator` and the password is the password you entered. **Note:** This will not work for GCP or Azure
-   - If you chose **Use Random Administrator Password** when you configured the tile or are using Azure or GCP:
-	   * **[Google Cloud Platform (GCP)](https://cloud.google.com/compute/docs/instances/windows/connecting-to-windows-instance)**:
-	   * **[Azure](https://docs.microsoft.com/en-us/azure/virtual-machines/windows/connect-logon)**
-	   * **vSphere** or **Amazon Web Services (AWS)**: There is no way to obtain the current Administrator password through the IaaS, because the BOSH agent randomized the password. To log into a Windows cell as admin, you need to configure the PCF Runtime Tile with **VM Options** > **Set the Password**. Make sure to apply your changes. Otherwise, you can access cell VMs using SSH and follow the SSH instructions above. Or you can use the `Set-Password` job in the [windows-utilities-release](https://github.com/cloudfoundry-incubator/windows-utilities-release).
+   - AWS or vSphere: if you chose **Set the password** under **VM Options** > **Manage Administrator Password** when you configured the PCF Runtime for Windows tile, the username is `Administrator` and the password is the one you entered. If you did not set the password, it is not possible to obtain the current Administrator password through the IaaS, because the BOSH agent randomized the password.
+   - GCP: follow the [linked instructions](https://cloud.google.com/compute/docs/instances/windows/connecting-to-windows-instance) for obtaining credentials.
+   - Azure: follow the [linked instructions](https://docs.microsoft.com/en-us/azure/virtual-machines/windows/connect-logon) for obtaining credentials.
 
 ####Establish an RDP connection
   - Open your RDP client. The examples below use the Microsoft Remote Desktop app.
@@ -158,20 +155,20 @@ Run the following command to retrieve the IP address of the Windows cell you wou
 
 1. To mount a directory on your local machine as a drive in the Windows cell, perform the following steps:
 	1. From the same **Edit Remote Desktops** window as above, click **Redirection**.
-	1. Click the plus icon at the bottom left. 
+	1. Click the plus icon at the bottom left.
 	<%= image_tag('rdp-redirection.png') %>
-	1. For **Name**, enter the name of the drive as it will appear in the Windows cell. For **Path**, enter the path of the local directory. 
+	1. For **Name**, enter the name of the drive as it will appear in the Windows cell. For **Path**, enter the path of the local directory.
 	1. Click **OK**.
 
 1. Close the **Edit Remote Desktops** window and double-click the newly added connection under **My Desktops** to open a RDP connection to the Windows cell.
 
 1. In the RDP session, you can use the [Consul CLI](#consul) to diagnose problems with your Windows cell.
 
-**Notes:** 
+**Notes:**
 
   - **For vSphere**, it is also possible to connect to your windows cell using the vCenter console once the Administrator password has been set.
 
-  - **If the Windows Cell does not have a public IP** and you are not in the same subnet, you can access the cell by tunnelling through the Ops Manager VM. To do this, SSH into the opsman vm with the flag `-L 3389:<Windows Cell IP>:3389`
+  - **If the Windows is not accessible from your host**, tunnel through the Ops Manager VM. To do this, SSH into the Ops Manager VM with the flag `-L 3389:<Windows Cell IP>:3389`
     and then use IP 127.0.0.1 from your RDP client.
 
 
@@ -183,7 +180,7 @@ Perform the following steps to use the Consul CLI on your Windows cell to diagno
 1. In your RDP session, open a PowerShell window.
 1. Change into the directory that contains the Consul CLI binary:
 	<pre class="terminal">
-	PS C:\Users\Administrator> cd C:\var\vcap\packages\consul-windows\bin\ 
+	PS C:\Users\Administrator> cd C:\var\vcap\packages\consul-windows\bin\
 	</pre>
 1. Use the Consul CLI to list the members of your Consul cluster:
 	<pre class="terminal">
