--- a/docs-content/azure-light-stemcell.html.md.erb
+++ b/docs-content/azure-light-stemcell.html.md.erb
@@ -31,7 +31,7 @@ To use the Azure light stemcell, you must accept the corresponding license agree
 
 ## <a id="req"></a>Configure Resources
 
-When you deploy or upgrade the PCF Runtime for Windows tile, configure the resources of Ops Manager Director and PCF Runtime for Windows as follows:
+When you deploy or upgrade the PCF Runtime for Windows tile on Azure, configure the resources of Ops Manager Director and PCF Runtime for Windows as follows:
 
 1. On the Ops Manager Installation Dashboard, select **PCF Runtime for Windows**.
 1. In the **Settings** tab, select **Resource Config**.
