[#154214531] small text change

--- a/docs-content/windows-troubleshooting.html.md.erb
+++ b/docs-content/windows-troubleshooting.html.md.erb
@@ -70,7 +70,7 @@ Perform the following steps to connect to your Windows cell to run diagnostics:
 	* For Windows, download the Microsoft Remote Desktop app from [Microsoft](https://www.microsoft.com/en-us/store/p/microsoft-remote-desktop/9wzdncrfj3ps).
 	* For Linux/UNIX, download an RDP client like [rdesktop](http://www.rdesktop.org/).
 
-1. You will need check the **Enable Remote Desktop Protocol** checkbox under `VM Options` in the tile.
+1. Select the **Enable Remote Desktop Protocol** checkbox under `VM Options` in the tile.
    <%= image_tag('vm-options.png') %>
   
 1. Obtain the IP address of the Windows cell you would like to connect to from the `Status` tab of the tile.
