--- a/docs-content/vsphere-stemcell-build.html.md.erb
+++ b/docs-content/vsphere-stemcell-build.html.md.erb
@@ -9,4 +9,4 @@ In vSphere, customers must build their own stemcells to use PCF Runtime for Wind
 
 Create a stemcell by following the directions in [Creating a vSphere Stemcell by Hand](https://github.com/cloudfoundry-incubator/bosh-windows-stemcell-builder/wiki/Creating-a-vSphere-Stemcell-by-Hand).
 
-The process includes starting with an ISO of Windows Server 2012R2 and installing the latest Windows Updates on a new virtual machine. Then you install the BOSH dependencies. Finally, you use the `stembuild` tool to package the VM's disk as a `.tgz` file that can be [uploaded to the Runtime for Windows tile](http://docs-pcf-staging.cfapps.io/pivotalcf/1-12/windows/deploy-windows.html) in Ops Manager.
+The process includes starting with an ISO of Windows Server 2012R2 and installing the latest Windows Updates on a new virtual machine. Then you install the BOSH dependencies. Finally, you use the `stembuild` tool to package the VM's disk as a `.tgz` file that can be [uploaded to the Runtime for Windows tile](./deploy-windows.html) in Ops Manager.
